# P2I-GAN-benchmark

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  train.out
experiments/: README.md  config.py  exp1.py  exp2.py  exp3.py  io.py  main.py  test.py
p2igan_bench/: __init__.py
p2igan_bench/config/: dk.json  dk_gauge.json  p2igan_baseline.json  p2igan_gan_baseline.json  p2igan_gan_baseline_gauge.json  p2igan_gan_v1.json  p2igan_gan_v2.json  stdk.json  stdk_gauge.json
p2igan_bench/data/: __init__.py  dataloader.py  sti_dataset.py
p2igan_bench/metrics/: __init__.py  metric.py
p2igan_bench/models/: __init__.py  dk.py  p2igan.py  simple.py  stdk.py
p2igan_bench/modules/: __init__.py  layer.py  losses.py
scripts/: evaluate.py  infer.py  preprocess.py  tozarr.py  train.py  visualize.py
tests/: test_dataloader.py
