[project]
name = "p2i-gan-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8,<3.9"
dependencies = [
    "decord>=0.6.0",
    "h5py>=3.11.0",
    "mlflow>=2.15.0",
    "pyyaml>=6.0.0",
    "torch>=2.4.1",
    "torchaudio>=2.4.1",
    "torchvision>=0.19.1",
    "torchmetrics>=1.4.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
